--- a/css/leon.css
+++ b/css/leon.css
@@ -23,17 +23,109 @@
 /* End Variables */
 /* Start Global Rules */
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 body {
   background-color: gray;
+  font-family: "Work Sans", sans-serif;
 }
 .container {
-  width: 60%;
-  margin: auto;
-  background-color: red;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: var(--main-padding);
+  padding-right: var(--main-padding);
+}
+/* Small  */
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+/* Medium */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+/* Large  */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+/* End Global Rules */
+/* ********************** */
+/* Start Header  */
+nav {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav img {
+  width: 60px;
 }
 
-/* End Global Rules */
+nav ul {
+  flex: 1;
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+nav ul li a {
+  display: block;
+  color: black;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+nav .icon {
+  display: none;
+  width: 5%;
+  height: 10px;
+}
+nav .icon .draw-icon {
+  text-align: end;
+  width: 30%;
+  height: 2px;
+  background-color: black;
+  position: relative;
+}
+nav .icon .draw-icon::after {
+  content: "";
+  position: absolute;
+  text-align: end;
+  width: 70%;
+  height: 2px;
+  background-color: black;
+  bottom: -5px;
+  right: 0;
+  transition: 0.3s;
+}
+nav .icon .draw-icon::before {
+  content: "";
+  position: absolute;
+  text-align: end;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  bottom: -10px;
+  right: 0;
+}
+nav .icon:hover .draw-icon::after {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  nav .icon {
+    display: block;
+  }
+  nav ul {
+    display: none;
+  }
+}
+/* End Header  */
